--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
       body {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: top;
         height: 100vh;
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: "Roboto", sans-serif;
       }
 
       form {
         display: flex;
         flex-direction: column;
         align-items: center;
+      }
+      input {
+        margin: 5px;
       }
     </style>
   </head>
