Update Styling and Functionality

--- a/index.html
+++ b/index.html
@@ -4,30 +4,29 @@
     <meta charset="UTF-8" />
     <title>Salculator</title>
     <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: top;
-        height: 100vh;
-        margin: 0;
-        font-family: "Roboto", sans-serif;
-      }
-
       form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
+        "display: flex; flex-direction: column; align-items: center;" }
       input {
         margin: 5px;
       }
     </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="main.js"></script>
-    <script>
-      var app = Elm.Main.init({ node: document.getElementById("app") });
-    </script>
+    <div
+      id="app"
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: top;
+        height: 100vh;
+        margin: 0;
+        font-family: Roboto, sans-serif;
+      "
+    >
+      <script src="main.js"></script>
+      <script>
+        var app = Elm.Main.init({ node: document.getElementById("app") });
+      </script>
+    </div>
   </body>
 </html>
