--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         height: 100vh;
         margin: 0;
         font-family: Roboto, sans-serif;
+        background-color: #1e272e;
       "
     >
       <script src="main.js"></script>
